--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@babel/runtime": "^7.10.1",
+    "aws-sdk": "^2.708.0",
     "axios": "^0.19.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -60,6 +61,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "mongoose": "^5.9.16",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "node-telegram-bot-api": "^0.50.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
